docs: auth endpoint documents
